--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -14,11 +14,12 @@ embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", 
 embassy-time = { version = "0.1.4",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
 embassy-futures = { version = "0.1.0" }
-embassy-lora = { git = "https://github.com/embassy-rs/embassy", features = ["time", "defmt"] }
+embassy-lora = { path = "../../embassy/embassy-lora" , features = ["time", "defmt"] }
 
-lora-phy = { version = "2.1.2" }
-lorawan-device = { version = "0.11.0", default-features = false, features = ["async", "external-lora-phy"] }
-lorawan = { version = "0.7.4", default-features = false, features = ["default-crypto"] }
+# lora-phy = { version = "2.1.2" }
+lora-phy = { path = "../../lora-phy" }
+lorawan-device = {path = "../../rust-lorawan/device" , default-features = false, features = ["async", "external-lora-phy"] }
+lorawan = { path = "../../rust-lorawan/encoding", version = "0.7.4", default-features = false, features = ["default-crypto"] }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
