--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -10,13 +10,13 @@ edition.workspace = true
 [dependencies]
 embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
 embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
-embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
-embassy-time = { version = "0.1.4",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
+embassy-executor = { path = "../../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-time = { path = "../../embassy/embassy-time",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
 embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
 embassy-futures = { version = "0.1.0" }
-embassy-lora = { path = "../../embassy/embassy-lora" , features = ["time", "defmt"] }
+embassy-lora = { path = "../../embassy/embassy-lora", features = ["time", "defmt"] }
 
-# lora-phy = { version = "2.1.2" }
+# lora-phy = { version = "3.0.0-alpha.1" }
 lora-phy = { path = "../../lora-phy" }
 lorawan-device = {path = "../../rust-lorawan/device" , default-features = false, features = ["async", "external-lora-phy"] }
 lorawan = { path = "../../rust-lorawan/encoding", version = "0.7.4", default-features = false, features = ["default-crypto"] }
@@ -56,5 +56,5 @@ dotenvy = "0.15.7"
 [profile.release]
 debug = 2
 codegen-units = 1
-#opt-level = 's'
-opt-level = 3
+opt-level = 's'
+# opt-level = 3
