--- a/gpslib/Cargo.toml
+++ b/gpslib/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = {version = "0.4.31", default-features = false }
-heapless = "0.7.16"
-defmt = { version = "0.3.5", optional = true }
+chrono = {version = "0.4.38", default-features = false }
+heapless = "0.8.0"
+defmt = { version = "0.3.8", optional = true }
 
 [features]
-defmt = [ "dep:defmt", "heapless/defmt" ]
+defmt = [ "dep:defmt", "heapless/defmt-03" ]
 
 [profile.release]
 opt-level = 's'
