--- a/modbus_master/Cargo.toml
+++ b/modbus_master/Cargo.toml
@@ -14,6 +14,6 @@ std = []
 defmt = [ "dep:defmt", "heapless/defmt" ]
 
 [profile.release]
-opt-level = 's'
+opt-level = 'z'
 codegen-units = 1
 overflow-checks = true
