--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -8,53 +8,52 @@ edition.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
-embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
-embassy-executor = { path = "../../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
-embassy-time = { path = "../../embassy/embassy-time",  features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
-embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
-embassy-futures = { version = "0.1.0" }
-embassy-lora = { path = "../../embassy/embassy-lora", features = ["time", "defmt"] }
+embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
+embassy-sync = { version = "0.6.0", features = ["defmt"] }
+embassy-executor = {  version = "0.6.0", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-98304"] }
+embassy-time = { version = "0.3.2",  features = [ "defmt", "defmt-timestamp-uptime"] }
+embassy-rp = { version = "0.2.0", features = ["defmt",  "unstable-pac", "time-driver", "critical-section-impl"] }
+embassy-futures = { version = "0.1.1" }
 
-# lora-phy = { version = "3.0.0-alpha.1" }
-lora-phy = { path = "../../lora-phy" }
-lorawan-device = {path = "../../rust-lorawan/device" , default-features = false, features = ["async", "external-lora-phy"] }
-lorawan = { path = "../../rust-lorawan/encoding", version = "0.7.4", default-features = false, features = ["default-crypto"] }
+lora-phy = { version = "3.0.1", features = [ "lorawan-radio"] }
+lorawan-device = { version = "0.12.2",  features = ["embassy-time", "default-crypto", "defmt"] }
 
-defmt = "0.3"
-defmt-rtt = "0.4"
+defmt = "0.3.8"
+defmt-rtt = "0.4.1"
 
 cortex-m = { version = "0.7.7", features = ["inline-asm"] }
 cortex-m-rt = "0.7.3"
-panic-probe = { version = "0.3.1", features = ["print-defmt"] }
-futures = { version = "0.3.28", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
+panic-probe = { version = "0.3.2", features = ["print-defmt"] }
+futures = { version = "0.3.30", default-features = false, features = ["async-await", "cfg-target-has-atomic"] }
+heapless = "0.8.0"
 embedded-graphics = "0.8.1"
-mipidsi = { path = "../mipidsi", features = [ "async" ] }
-display-interface-spi = { git = "https://github.com/therealprof/display-interface/", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
-display-interface = { git = "https://github.com/therealprof/display-interface", version = "0.5.0-alpha.1", features = [ "async", "nightly"] }
-heapless = "0.7.16"
+st7735-embassy = {git="https://github.com/kalkyl/st7735-embassy" }
+
 
 gpslib = { path = "../gpslib", features = ["defmt"]}
 modbus_master = { path = "../modbus_master", features = ["defmt"]}
 envconst = { path = "../envconst" }
 
-embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
-embedded-hal-async = "1.0.0-rc.1"
-embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
+embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
+embedded-hal-async = "1.0.0"
+embedded-hal-bus = { version = "0.2.0", features = ["async"] }
 embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
 embedded-storage = { version = "0.3" }
-static_cell = { version = "1.2", features = ["nightly"]}
-log = "0.4"
+static_cell = { version = "2.1.0" }
+log = "0.4.22"
 rand = { version = "0.8.5", default-features = false }
-micromath = "2.0.0"
-itertools = { version = "0.11.0", default-features = false }
+micromath = "2.1.0"
+itertools = { version = "0.13.0", default-features = false }
 
+portable-atomic = { version = "1.7.0", features = ["critical-section"] } # needed for static_cell on thumbv6
+
+critical-section = "1.1"
 
 [build-dependencies]
 dotenvy = "0.15.7"
 
 [profile.release]
 debug = 2
+opt-level = 'z'
 codegen-units = 1
-opt-level = 's'
-# opt-level = 3
+overflow-checks = true
