--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -5,8 +5,6 @@ license.workspace = true
 rust-version.workspace = true
 edition.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
 embassy-sync = { version = "0.6.0", features = ["defmt"] }
@@ -27,8 +25,8 @@ panic-probe = { version = "0.3.2", features = ["print-defmt"] }
 futures = { version = "0.3.30", default-features = false, features = ["async-await", "cfg-target-has-atomic"] }
 heapless = "0.8.0"
 embedded-graphics = "0.8.1"
-st7735-embassy = { path = "../../st7735" }
-
+st7735-embassy = { version = "0.2.0", git="https://github.com/kalkyl/st7735-embassy", rev = "42246aa9fef10bbf0f49dabff10c9afebdd4094b"}
+sht3x = { path = "../../sht3x", features = ["defmt"]}
 
 gpslib = { path = "../gpslib", features = ["defmt"]}
 modbus_master = { path = "../modbus_master", features = ["defmt"]}
@@ -37,7 +35,7 @@ envconst = { path = "../envconst" }
 embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
 embedded-hal-async = "1.0.0"
 embedded-hal-bus = { version = "0.2.0", features = ["async"] }
-embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
+embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
 embedded-storage = { version = "0.3" }
 static_cell = { version = "2.1.0" }
 log = "0.4.22"
